2008-04-21  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Epson/epalc380.ppd, PPD/Epson/epalcx21.ppd,
	  PPD/Epson/epalm200.ppd, PPD/Epson/epalm201.ppd: Added new PPDs
	  from Epson, for Epson AcuLaser C3800N, CX21N, M2000,
	  M2010 (Thanks to Raymond Lee and Ray Hsu from Epson).

2008-03-14  George Liu <george.liu@ricoh-tech.com>

        * Added 62 Postscript and 60 pxlmono PPD files for 60 Ricoh Family
	Group printers. 

2008-02-11  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/GS-HalftoningAlgorithm-Gray.xml: Fixed default setting for
	  some drivers (Ubuntu bug LP: #25105).
	
2007-12-31  John Hosszu <john.hosszu@hp.com>

	* printer/: Added
          HP-LaserJet_M2727.xml
          HP-Photosmart_C4380.xml
          HP-OfficeJet_Pro_K8600.xml

	* PPD/: Added
          HP-LaserJet_M2727_MFP.ppd
          HP-LaserJet_9040.ppd

2007-12-17  George Liu <george.liu@ricoh-tech.com>

        * Updated 328 Ricoh Family PCL-XL PPD files (Supports -o sides option
	on Mac X; Fixed a bug in UIConstraints that's catured by latest
	cupstestppd.)

2007-12-17  George Liu <george.liu@ricoh-tech.com>

        * Added 7 Postscript and 6 PCL-XL PPD files for 7
	printer entries.

2007-12-02  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Stc670pl.upp.xml: Removed command line prototype, the PPDs
	  for this driver are generated by the "Stc670p.upp" driver entry.
	* driver/Stc670p.upp.xml, driver/Stc760p.upp.xml,
	  driver/Stc760pl.upp.xml: Text corrections.

2007-10-22  George Liu <george.liu@ricoh-tech.com>

        * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_3050N_PXL.ppd
        * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_5050N_PXL.ppd
        * Added: db/source/printer/Ricoh-GX_3050N.xml
        * Added: db/source/printer/Ricoh-GX_5050N.xml
	* Modified: db/source/driver/pxlmono.xml

2007-10-11  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/st640ihg.upp.xml, driver/st640ih.upp.xml,
	  driver/st640pg.upp.xml, driver/st640plg.upp.xml,