@@ -83,18 +83,23 @@
     As the PPD files are contained in the driver package we will not
     provide PPD files here on OpenPrinting.&lt;p&gt;
 
+    This driver is a pure printer driver. The scanning functionality
+    of multi-function devices is not supported.&lt;p&gt;
+
   </en>
  </comments>
  <printers>
   <printer>
+   <id>printer/Dell-1100</id>
+  </printer>
+  <printer>
+   <id>printer/Dell-1110</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-CLP-200</id>
+  </printer>
+  <printer>
    <id>printer/Samsung-CLP-300</id>
-   <functionality>
-     <text>0</text>
-     <lineart>0</lineart>
-     <graphics>0</graphics>
-     <photo>0</photo>
-     <speed>0</speed>
-   </functionality>
   </printer>
   <printer>
    <id>printer/Samsung-CLP-500</id>
@@ -104,13 +109,18 @@
   </printer>
   <printer>
    <id>printer/Samsung-CLP-600</id>
-   <functionality>
-     <text>0</text>
-     <lineart>0</lineart>
-     <graphics>0</graphics>
-     <photo>0</photo>
-     <speed>0</speed>
-   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-CLP-610</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-CLX-2160</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-CLX-2170</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-CLX-3160</id>
   </printer>
   <printer>
    <id>printer/Samsung-ML-1510</id>
@@ -126,6 +136,12 @@
   </printer>
   <printer>
    <id>printer/Samsung-ML-1610</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1630</id>
    <functionality>
     <monochrome />
    </functionality>
@@ -167,10 +183,106 @@
    </functionality>
   </printer>
   <printer>
+   <id>printer/Samsung-ML-2510</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
    <id>printer/Samsung-ML-2550</id>
    <functionality>
     <monochrome />
    </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2571</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-3050</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-3560</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3115</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3116</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3117</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3120</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3121</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3122</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3130</id>
+  <functionality>
+    <monochrome />
+   </functionality>
+   </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3150</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3420</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3425</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_5500</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_6100</id>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_6110</id>
   </printer>
  </printers>
 </driver>
