@@ -1,3 +1,8 @@
+2008-05-10  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/splix.xml: Updated list of supported printers to the
+	  state of the list on the original home page of the driver.
+
 2008-04-21  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* PPD/Epson/epalc380.ppd, PPD/Epson/epalcx21.ppd,
